qasm3sub/qasm3subParser.py
# Generated from qasm3sub.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class qasm3subParser ( Parser ):

    grammarFileName = "qasm3sub.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'OPENQASM'", "'include'", "'qubit'", 
                     "'qreg'", "'bit'", "'creg'", "'int'", "'uint'", "'float'", 
                     "'angle'", "'fixed'", "'bool'", "'const'", "'let'", 
                     "'||'", "'gate'", "'CX'", "'U'", "'gphase'", "'measure'", 
                     "'barrier'", "'inv'", "'pow'", "'ctrl'", "'@'", "'reset'", 
                     "'~'", "'!'", "'>'", "'<'", "'>='", "'<='", "'=='", 
                     "'!='", "'&&'", "'|'", "'^'", "'&'", "'<<'", "'>>'", 
                     "'++'", "'--'", "'sin'", "'cos'", "'tan'", "'exp'", 
                     "'ln'", "'sqrt'", "'rotl'", "'rotr'", "'popcount'", 
                     "'lengthof'", "'+='", "'-='", "'*='", "'/='", "'&='", 
                     "'|='", "'~='", "'^='", "'<<='", "'>>='", "'in'", "'if'", 
                     "'else'", "'#invariant'", "'for'", "'while'", "'break'", 
                     "'continue'", "'end'", "'#qubits'", "'def'", "'return'", 
                     "'#pragma'", "'['", "']'", "'{'", "'}'", "'('", "')'", 
                     "':'", "';'", "'.'", "','", "'='", "'->'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "LPAREN", 
                      "RPAREN", "COLON", "SEMICOLON", "DOT", "COMMA", "EQUALS", 
                      "ARROW", "PLUS", "MINUS", "MUL", "DIV", "MOD", "Constant", 
                      "Whitespace", "Newline", "Integer", "Identifier", 
                      "RealNumber", "StringLiteral", "LineComment", "BlockComment" ]

    RULE_program = 0
    RULE_header = 1
    RULE_version = 2
    RULE_include = 3
    RULE_globalStatement = 4
    RULE_statement = 5
    RULE_quantumDeclarationStatement = 6
    RULE_classicalDeclarationStatement = 7
    RULE_classicalAssignment = 8
    RULE_assignmentStatement = 9
    RULE_returnSignature = 10
    RULE_designator = 11
    RULE_doubleDesignator = 12
    RULE_identifierList = 13
    RULE_association = 14
    RULE_quantumType = 15
    RULE_quantumDeclaration = 16
    RULE_quantumArgument = 17
    RULE_quantumArgumentList = 18
    RULE_bitType = 19
    RULE_singleDesignatorType = 20
    RULE_doubleDesignatorType = 21
    RULE_noDesignatorType = 22
    RULE_classicalType = 23
    RULE_constantDeclaration = 24
    RULE_singleDesignatorDeclaration = 25
    RULE_doubleDesignatorDeclaration = 26
    RULE_noDesignatorDeclaration = 27
    RULE_bitDeclaration = 28
    RULE_classicalDeclaration = 29
    RULE_classicalArgument = 30
    RULE_classicalArgumentList = 31
    RULE_aliasStatement = 32
    RULE_indexIdentifier = 33
    RULE_indexIdentifierList = 34
    RULE_indexEqualsAssignmentList = 35
    RULE_rangeDefinition = 36
    RULE_quantumGateDefinition = 37
    RULE_quantumGateSignature = 38
    RULE_quantumBlock = 39
    RULE_quantumLoop = 40
    RULE_quantumLoopBlock = 41
    RULE_quantumStatement = 42
    RULE_quantumInstruction = 43
    RULE_quantumPhase = 44
    RULE_quantumMeasurement = 45
    RULE_quantumMeasurementAssignment = 46
    RULE_quantumBarrier = 47
    RULE_quantumGateModifier = 48
    RULE_quantumGateCall = 49
    RULE_quantumGateName = 50
    RULE_unaryOperator = 51
    RULE_relationalOperator = 52
    RULE_logicalOperator = 53
    RULE_expressionStatement = 54
    RULE_expression = 55
    RULE_xOrExpression = 56
    RULE_bitAndExpression = 57
    RULE_bitShiftExpression = 58
    RULE_additiveExpression = 59
    RULE_multiplicativeExpression = 60
    RULE_unaryExpression = 61
    RULE_expressionTerminator = 62
    RULE_incrementor = 63
    RULE_builtInCall = 64
    RULE_builtInMath = 65
    RULE_castOperator = 66
    RULE_expressionList = 67
    RULE_booleanExpression = 68
    RULE_comparisonExpression = 69
    RULE_equalsExpression = 70
    RULE_assignmentOperator = 71
    RULE_equalsAssignmentList = 72
    RULE_membershipTest = 73
    RULE_setDeclaration = 74
    RULE_programBlock = 75
    RULE_branchingStatement = 76
    RULE_loopSignature = 77
    RULE_loopStatement = 78
    RULE_controlDirectiveStatement = 79
    RULE_controlDirective = 80
    RULE_subroutineDefinition = 81
    RULE_returnStatement = 82
    RULE_subroutineBlock = 83
    RULE_subroutineCall = 84
    RULE_pragma = 85

    ruleNames =  [ "program", "header", "version", "include", "globalStatement", 
                   "statement", "quantumDeclarationStatement", "classicalDeclarationStatement", 
                   "classicalAssignment", "assignmentStatement", "returnSignature", 
                   "designator", "doubleDesignator", "identifierList", "association", 
                   "quantumType", "quantumDeclaration", "quantumArgument", 
                   "quantumArgumentList", "bitType", "singleDesignatorType", 
                   "doubleDesignatorType", "noDesignatorType", "classicalType", 
                   "constantDeclaration", "singleDesignatorDeclaration", 
                   "doubleDesignatorDeclaration", "noDesignatorDeclaration", 
                   "bitDeclaration", "classicalDeclaration", "classicalArgument", 
                   "classicalArgumentList", "aliasStatement", "indexIdentifier", 
                   "indexIdentifierList", "indexEqualsAssignmentList", "rangeDefinition", 
                   "quantumGateDefinition", "quantumGateSignature", "quantumBlock", 
                   "quantumLoop", "quantumLoopBlock", "quantumStatement", 
                   "quantumInstruction", "quantumPhase", "quantumMeasurement", 
                   "quantumMeasurementAssignment", "quantumBarrier", "quantumGateModifier", 
                   "quantumGateCall", "quantumGateName", "unaryOperator", 
                   "relationalOperator", "logicalOperator", "expressionStatement", 
                   "expression", "xOrExpression", "bitAndExpression", "bitShiftExpression", 
                   "additiveExpression", "multiplicativeExpression", "unaryExpression", 
                   "expressionTerminator", "incrementor", "builtInCall", 
                   "builtInMath", "castOperator", "expressionList", "booleanExpression", 
                   "comparisonExpression", "equalsExpression", "assignmentOperator", 
                   "equalsAssignmentList", "membershipTest", "setDeclaration", 
                   "programBlock", "branchingStatement", "loopSignature", 
                   "loopStatement", "controlDirectiveStatement", "controlDirective", 
                   "subroutineDefinition", "returnStatement", "subroutineBlock", 
                   "subroutineCall", "pragma" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    LBRACKET=76
    RBRACKET=77
    LBRACE=78
    RBRACE=79
    LPAREN=80
    RPAREN=81
    COLON=82
    SEMICOLON=83
    DOT=84
    COMMA=85
    EQUALS=86
    ARROW=87
    PLUS=88
    MINUS=89
    MUL=90
    DIV=91
    MOD=92
    Constant=93
    Whitespace=94
    Newline=95
    Integer=96
    Identifier=97
    RealNumber=98
    StringLiteral=99
    LineComment=100
    BlockComment=101

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(qasm3subParser.HeaderContext,0)


        def globalStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasm3subParser.GlobalStatementContext)
            else:
                return self.getTypedRuleContext(qasm3subParser.GlobalStatementContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasm3subParser.StatementContext)
            else:
                return self.getTypedRuleContext(qasm3subParser.StatementContext,i)


        def getRuleIndex(self):
            return qasm3subParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = qasm3subParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.header()
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << qasm3subParser.T__2) | (1 << qasm3subParser.T__3) | (1 << qasm3subParser.T__4) | (1 << qasm3subParser.T__5) | (1 << qasm3subParser.T__6) | (1 << qasm3subParser.T__7) | (1 << qasm3subParser.T__8) | (1 << qasm3subParser.T__9) | (1 << qasm3subParser.T__10) | (1 << qasm3subParser.T__11) | (1 << qasm3subParser.T__12) | (1 << qasm3subParser.T__13) | (1 << qasm3subParser.T__15) | (1 << qasm3subParser.T__16) | (1 << qasm3subParser.T__17) | (1 << qasm3subParser.T__18) | (1 << qasm3subParser.T__19) | (1 << qasm3subParser.T__20) | (1 << qasm3subParser.T__21) | (1 << qasm3subParser.T__22) | (1 << qasm3subParser.T__23) | (1 << qasm3subParser.T__25) | (1 << qasm3subParser.T__26) | (1 << qasm3subParser.T__27) | (1 << qasm3subParser.T__42) | (1 << qasm3subParser.T__43) | (1 << qasm3subParser.T__44) | (1 << qasm3subParser.T__45) | (1 << qasm3subParser.T__46) | (1 << qasm3subParser.T__47) | (1 << qasm3subParser.T__48) | (1 << qasm3subParser.T__49) | (1 << qasm3subParser.T__50) | (1 << qasm3subParser.T__51))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (qasm3subParser.T__63 - 64)) | (1 << (qasm3subParser.T__65 - 64)) | (1 << (qasm3subParser.T__66 - 64)) | (1 << (qasm3subParser.T__67 - 64)) | (1 << (qasm3subParser.T__68 - 64)) | (1 << (qasm3subParser.T__69 - 64)) | (1 << (qasm3subParser.T__70 - 64)) | (1 << (qasm3subParser.T__71 - 64)) | (1 << (qasm3subParser.T__72 - 64)) | (1 << (qasm3subParser.T__74 - 64)) | (1 << (qasm3subParser.LPAREN - 64)) | (1 << (qasm3subParser.MINUS - 64)) | (1 << (qasm3subParser.Constant - 64)) | (1 << (qasm3subParser.Integer - 64)) | (1 << (qasm3subParser.Identifier - 64)) | (1 << (qasm3subParser.RealNumber - 64)) | (1 << (qasm3subParser.StringLiteral - 64)))) != 0):
                self.state = 175
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [qasm3subParser.T__2, qasm3subParser.T__3, qasm3subParser.T__15, qasm3subParser.T__71, qasm3subParser.T__72, qasm3subParser.T__74]:
                    self.state = 173
                    self.globalStatement()
                    pass
                elif token in [qasm3subParser.T__4, qasm3subParser.T__5, qasm3subParser.T__6, qasm3subParser.T__7, qasm3subParser.T__8, qasm3subParser.T__9, qasm3subParser.T__10, qasm3subParser.T__11, qasm3subParser.T__12, qasm3subParser.T__13, qasm3subParser.T__16, qasm3subParser.T__17, qasm3subParser.T__18, qasm3subParser.T__19, qasm3subParser.T__20, qasm3subParser.T__21, qasm3subParser.T__22, qasm3subParser.T__23, qasm3subParser.T__25, qasm3subParser.T__26, qasm3subParser.T__27, qasm3subParser.T__42, qasm3subParser.T__43, qasm3subParser.T__44, qasm3subParser.T__45, qasm3subParser.T__46, qasm3subParser.T__47, qasm3subParser.T__48, qasm3subParser.T__49, qasm3subParser.T__50, qasm3subParser.T__51, qasm3subParser.T__63, qasm3subParser.T__65, qasm3subParser.T__66, qasm3subParser.T__67, qasm3subParser.T__68, qasm3subParser.T__69, qasm3subParser.T__70, qasm3subParser.LPAREN, qasm3subParser.MINUS, qasm3subParser.Constant, qasm3subParser.Integer, qasm3subParser.Identifier, qasm3subParser.RealNumber, qasm3subParser.StringLiteral]:
                    self.state = 174
                    self.statement()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(qasm3subParser.VersionContext,0)


        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(qasm3subParser.IncludeContext)
            else:
                return self.getTypedRuleContext(qasm3subParser.IncludeContext,i)


        def getRuleIndex(self):
            return qasm3subParser.RULE_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeader" ):
                listener.enterHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeader" ):
                listener.exitHeader(self)




    def header(self):

        localctx = qasm3subParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==qasm3subParser.T__0:
                self.state = 180
                self.version()


            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==qasm3subParser.T__1:
                self.state = 183
                self.include()
                self.state = 188
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(qasm3subParser.SEMICOLON, 0)

        def Integer(self):
            return self.getToken(qasm3subParser.Integer, 0)

        def RealNumber(self):
            return self.getToken(qasm3subParser.RealNumber, 0)

        def getRuleIndex(self):
            return qasm3subParser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)




    def version(self):

        localctx = qasm3subParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_version)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(qasm3subParser.T__0)
            self.state = 190
            _la = self._input.LA(1)
            if not(_la==qasm3subParser.Integer or _la==qasm3subParser.RealNumber):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 191
            self.match(qasm3subParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StringLiteral(self):
            return self.getToken(qasm3subParser.StringLiteral, 0)

        def SEMICOLON(self):
            return self.getToken(qasm3subParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return qasm3subParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)




    def include(self):

        localctx = qasm3subParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(qasm3subParser.T__1)
            self.state = 194
            self.match(qasm3subParser.StringLiteral)
            self.state = 195
            self.match(qasm3subParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subroutineDefinition(self):
            return self.getTypedRuleContext(qasm3subParser.SubroutineDefinitionContext,0)


        def quantumGateDefinition(self):
            return self.getTypedRuleContext(qasm3subParser.QuantumGateDefinitionContext,0)


        def quantumDeclarationStatement(self):
            return self.getTypedRuleContext(qasm3subParser.QuantumDeclarationStatementContext,0)


        def pragma(self):
            return self.getTypedRuleContext(qasm3subParser.PragmaContext,0)


        def getRuleIndex(self):
            return qasm3subParser.RULE_globalStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalStatement" ):
                listener.enterGlobalStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalStatement" ):
                listener.exitGlobalStatement(self)




    def globalStatement(self):
